clusters/sno/applications/vaultwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      serviceAccountName: vaultwarden
      securityContext:
        runAsUser: 0
        runAsGroup: 0
        fsGroup: 0
      containers:
        - name: vaultwarden
          image: vaultwarden/server:1.37.1@sha256:ebdfe70701c60ac0c28c697e787cea767d7972940b786037b29fe0d507f821e8
          securityContext:
            privileged: true
            runAsUser: 0
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /data
          resources:
            requests:
              memory: 64Mi
              cpu: 50m
            limits:
              memory: 256Mi
              cpu: 500m
          startupProbe:
            httpGet:
              path: /alive
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 60
          livenessProbe:
            httpGet:
              path: /alive
              port: 80
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /alive
              port: 80
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: vaultwarden-data
