clusters/sno/applications/vaultwarden/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden-tailscale
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: vaultwarden
      port:
        number: 80
